- The MASS datasets no longer require data(foo) to load them. (7.0-11)
- mvrnorm uses eigen(EISPACK=TRUE) for back-compatibility (7.0-11, R 1.7.0)
- print.summary.polr could lose dimnames for 1 coefficient.
- remove heart as survival in R now has it.
- confint.{lm,glm} didn't handle specifying parm in all cases.
- confint and confint.lm have been migrated to base in R.
- addterm.default, dropterm.default and stepAIC work better inside functions.
- glm.nb now sets AIC in the object, and has a logLik() method.
- truehist now accepts a 'ylab' argument.
- negative.binomial and neg.bin no longer generate objects with
  package:MASS in their environment.
- stepAIC now drops (if allowed) 0-df terms sequentially from the right.
- lda(CV=TRUE) now works for rank-deficient fits.
- predict methods for lda, polr now check newdata types.
- model.frame.lda/polr now look for the environment of the original formula.
- polr has a new `model' argument defaulting to TRUE.
- fitdistr supports the trivial case of a Normal distribution.
- sammon and isoMDS now allow missing values in the dissimilarity matrix, and
  isoMDS allows Minkowski distances in the configuration space.
- cov.trob works better if wts are supplied, and may converge a little faster 
  in any case.
- The ch11.R script now uses mclust not mclust1998.
- The default xlab for boxcox() is now greek lambda.
- glmmPQL now handles offset terms.
- add predict.rlm method to correct predict.lm in the case se.fit=TRUE.
- weighted rlm fits are handled better, and default to "inv.var".
- logtrans works without specifying 'data'.
- predict() method for glmmPQL.
- polr() has an option for probit or proportional hazard fits.
- neg.bin() and negative.binomial() had an error in the aic() formula.
- The ch05.R script now includes the code for Figure 5.8.
- Datasets austres, fdeaths, lh, mdeaths, nottem and rock 
  are now visible in the 'datasets' package of R 2.0.0 and so have 
  been removed here.