@@ -88,6 +88,8 @@ Library MASS
 - Datasets austres, fdeaths, lh, mdeaths, nottem and rock 
   are now visible in the 'datasets' package of R 2.0.0 and so have 
   been removed here.
+- Script ch07.R now gives details using the gam() function in package gam as
+  well as that in package mgcv.
 
 
 Library class
